--- a/Manuel/jsconfig.json
+++ b/Manuel/jsconfig.json
@@ -5,6 +5,6 @@
   "include": [
     "*.js",
     "**/*.js",
-    "c:\\Users\\Manuel Lopes\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.14\\p5types\\global.d.ts"
+    "c:\\Users\\pauli\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.14\\p5types\\global.d.ts"
   ]
 }
